# ProgettoKMeans

./: CMakeLists.txt  kmeans.h  main.cpp  main_parallel_v1.cpp  main_parallel_v2.cpp  main_parallel_v3.cpp  main_parallel_v4.cpp  main_parallel_v5.cpp
